@@ -1,5 +1,4 @@
 #Build version info
-#Tue Feb 14 17:12:31 CST 2006
+#Wed Feb 15 10:27:48 CST 2006
 version=0.6.1
-buildDate=2006/02/14 17\:12
-buildNum=108
+buildNum=109
