@@ -40,6 +40,16 @@ public interface DAOGenerator {
      */
     void setProperties(Map properties);
 
+	/**
+	 * Abator will supply a list to this method.  The implementation class may
+	 * add strings to the list that will be treated as warning messages and
+	 * displayed to the user.  The concept of a warning is that code generation
+	 * can continue, but that the results may not be what is expected.
+	 * 
+	 * @param warnings
+	 */
+	void setWarnings(List warnings);
+	
     /**
      * Sets the target package for this instance. This value should be used to
      * calculate the package for the DAO interface and implementation classes.
